--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,10 @@
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+export DH_VERBOSE=1
 
 %:
 	dh $@  --with autotools-dev
+
+override_dh_auto_test:
+	echo "Skipping the auto test target since there isn't a test target"
