flite's configure.in doesn't have a VERSION variable, so this is a work around for now.

--- a/flite.pc.in
+++ b/flite.pc.in
@@ -6,7 +6,7 @@ includedir=@includedir@
 Name: flite
 Description: a text to speech library
 Requires:
-Version: @VERSION@
+Version: 2.0.0
 Libs: -L${libdir} -lflite
 Libs.private: -lm
 Cflags: -I${includedir}/flite/
