--- a/flite.pc.in
+++ b/flite.pc.in
@@ -7,6 +7,6 @@ Name: flite
 Description: a text to speech library
 Requires:
 Version: 2.0.0
-Libs: -L${libdir} -lflite
+Libs: -L${libdir} -lflite -lflite_cmu_grapheme_lang -lflite_cmu_grapheme_lex -lflite_cmu_indic_lang -lflite_cmu_indic_lex -lflite_cmulex -lflite_cmu_time_awb -lflite_cmu_us_awb -lflite_cmu_us_kal16 -lflite_cmu_us_kal -lflite_cmu_us_rms -lflite_cmu_us_slt -lflite_usenglish
 Libs.private: -lm
 Cflags: -I${includedir}/flite/
